--- a/src/app/pages/pdcalc/components/secustructure/secustructure.compoment.html
+++ b/src/app/pages/pdcalc/components/secustructure/secustructure.compoment.html
@@ -1,4 +1,4 @@
-<div class="card cyno-body">
+<div class="card">
         <div class="card-header card-header-sm">
             <h5 class="card-title project-title">产品证券结构</h5>
         </div>
